# image-classification-normal-lap

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: pipeline_data.py  train.py
src/data_engineering/: data_balancer.py  data_distributor.py  feature_engineering.py
src/data_ingestion/: data_loader.py
src/data_preprocessing/: preprocessor.py
src/evalution/: model_evaluator.py
src/models/: __init__.py  advanced_models.py  base_cnn.py  cnn_model.py  efficient_cnn.py  resnet_improved_cnn.py
